--- a/config/sync/core.entity_form_display.paragraph.gallery.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.gallery.default.yml
@@ -7,8 +7,8 @@ dependencies:
     - field.field.paragraph.gallery.field_background_color
     - field.field.paragraph.gallery.field_background_image
     - field.field.paragraph.gallery.field_images
-    - field.field.paragraph.gallery.field_link
     - field.field.paragraph.gallery.field_vih_heading
+    - field.field.paragraph.gallery.field_vih_link
     - paragraphs.paragraphs_type.gallery
   module:
     - entity_browser
@@ -58,7 +58,7 @@ content:
     third_party_settings: {  }
   field_images:
     type: entity_browser_file
-    weight: 2
+    weight: 1
     settings:
       entity_browser: image_browser
       field_widget_remove: true
@@ -69,21 +69,21 @@ content:
       view_mode: default
     region: content
     third_party_settings: {  }
-  field_link:
+  field_vih_heading:
+    weight: 0
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_vih_link:
     weight: 3
     settings:
       placeholder_url: ''
       placeholder_title: ''
     third_party_settings: {  }
     type: link_default
-    region: content
-  field_vih_heading:
-    weight: 1
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
     region: content
 hidden:
   created: true
