--- a/config/sync/field.field.paragraph.gallery.field_vih_link.yml
+++ b/config/sync/field.field.paragraph.gallery.field_vih_link.yml
@@ -1,14 +1,14 @@
-uuid: 680a2f5a-934c-448e-830e-4a5a75929492
+uuid: 3aa44a24-7769-46d9-a389-c5b363bb1e15
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_link
+    - field.storage.paragraph.field_vih_link
     - paragraphs.paragraphs_type.gallery
   module:
     - link
-id: paragraph.gallery.field_link
-field_name: field_link
+id: paragraph.gallery.field_vih_link
+field_name: field_vih_link
 entity_type: paragraph
 bundle: gallery
 label: Link
@@ -19,5 +19,5 @@ default_value: {  }
 default_value_callback: ''
 settings:
   link_type: 17
-  title: 2
+  title: 1
 field_type: link
