--- a/config/sync/field.field.paragraph.long_course_list_.field_vih_link.yml
+++ b/config/sync/field.field.paragraph.long_course_list_.field_vih_link.yml
@@ -1,14 +1,14 @@
-uuid: 006a4ce4-c316-43b2-8256-6e9b270aef9c
+uuid: 5214e17a-22d8-4af9-855d-ed1353814e05
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_link
+    - field.storage.paragraph.field_vih_link
     - paragraphs.paragraphs_type.long_course_list_
   module:
     - link
-id: paragraph.long_course_list_.field_link
-field_name: field_link
+id: paragraph.long_course_list_.field_vih_link
+field_name: field_vih_link
 entity_type: paragraph
 bundle: long_course_list_
 label: Link
