VI-179 paragraph short_course_list field_vih_link templates

--- a/config/sync/core.entity_view_display.paragraph.short_course_list_.default.yml
+++ b/config/sync/core.entity_view_display.paragraph.short_course_list_.default.yml
@@ -6,8 +6,8 @@ dependencies:
     - field.field.paragraph.short_course_list_.field_background_color
     - field.field.paragraph.short_course_list_.field_background_image
     - field.field.paragraph.short_course_list_.field_course_id
-    - field.field.paragraph.short_course_list_.field_link
     - field.field.paragraph.short_course_list_.field_vih_heading
+    - field.field.paragraph.short_course_list_.field_vih_link
     - paragraphs.paragraphs_type.short_course_list_
   module:
     - link
@@ -16,8 +16,16 @@ targetEntityType: paragraph
 bundle: short_course_list_
 mode: default
 content:
-  field_link:
-    weight: 2
+  field_vih_heading:
+    weight: 1
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_vih_link:
+    weight: 3
     label: hidden
     settings:
       trim_length: null
@@ -27,14 +35,6 @@ content:
       target: '0'
     third_party_settings: {  }
     type: link
-    region: content
-  field_vih_heading:
-    weight: 1
-    label: hidden
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
     region: content
 hidden:
   field_background_color: true
