--- a/config/sync/core.entity_form_display.paragraph.short_course_list_.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.short_course_list_.default.yml
@@ -7,8 +7,8 @@ dependencies:
     - field.field.paragraph.short_course_list_.field_background_color
     - field.field.paragraph.short_course_list_.field_background_image
     - field.field.paragraph.short_course_list_.field_course_id
-    - field.field.paragraph.short_course_list_.field_link
     - field.field.paragraph.short_course_list_.field_vih_heading
+    - field.field.paragraph.short_course_list_.field_vih_link
     - paragraphs.paragraphs_type.short_course_list_
   module:
     - entity_browser
@@ -57,7 +57,7 @@ content:
     region: content
     third_party_settings: {  }
   field_course_id:
-    weight: 2
+    weight: 1
     settings:
       match_operator: CONTAINS
       size: 60
@@ -65,21 +65,21 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
-  field_link:
+  field_vih_heading:
+    weight: 0
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_vih_link:
     weight: 3
     settings:
       placeholder_url: ''
       placeholder_title: ''
     third_party_settings: {  }
     type: link_default
-    region: content
-  field_vih_heading:
-    weight: 1
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
     region: content
 hidden:
   created: true
