--- a/config/sync/field.field.paragraph.user_quote.field_vih_link.yml
+++ b/config/sync/field.field.paragraph.user_quote.field_vih_link.yml
@@ -1,14 +1,14 @@
-uuid: cba7b7d8-ab6e-4a89-9252-c041e0eb8357
+uuid: 23767a88-82b4-4df2-802c-30f3730e9413
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_link
+    - field.storage.paragraph.field_vih_link
     - paragraphs.paragraphs_type.user_quote
   module:
     - link
-id: paragraph.user_quote.field_link
-field_name: field_link
+id: paragraph.user_quote.field_vih_link
+field_name: field_vih_link
 entity_type: paragraph
 bundle: user_quote
 label: Link
@@ -19,5 +19,5 @@ default_value: {  }
 default_value_callback: ''
 settings:
   link_type: 17
-  title: 2
+  title: 1
 field_type: link
