--- a/config/sync/core.entity_form_display.paragraph.user_quote.default.yml
+++ b/config/sync/core.entity_form_display.paragraph.user_quote.default.yml
@@ -7,10 +7,10 @@ dependencies:
     - field.field.paragraph.user_quote.field_author
     - field.field.paragraph.user_quote.field_background_color
     - field.field.paragraph.user_quote.field_background_image
-    - field.field.paragraph.user_quote.field_link
     - field.field.paragraph.user_quote.field_paragraph_person_photo
     - field.field.paragraph.user_quote.field_paragraph_text
     - field.field.paragraph.user_quote.field_vih_heading
+    - field.field.paragraph.user_quote.field_vih_link
     - paragraphs.paragraphs_type.user_quote
   module:
     - entity_browser
@@ -41,7 +41,7 @@ bundle: user_quote
 mode: default
 content:
   field_author:
-    weight: 2
+    weight: 1
     settings:
       size: 60
       placeholder: ''
@@ -67,17 +67,9 @@ content:
       selection_mode: selection_append
     region: content
     third_party_settings: {  }
-  field_link:
-    weight: 5
-    settings:
-      placeholder_url: ''
-      placeholder_title: ''
-    third_party_settings: {  }
-    type: link_default
-    region: content
   field_paragraph_person_photo:
     type: entity_browser_file
-    weight: 4
+    weight: 3
     settings:
       entity_browser: image_browser
       field_widget_remove: true
@@ -90,19 +82,27 @@ content:
     third_party_settings: {  }
   field_paragraph_text:
     type: text_textarea
-    weight: 3
+    weight: 2
     region: content
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
   field_vih_heading:
-    weight: 1
+    weight: 0
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
+    region: content
+  field_vih_link:
+    weight: 5
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+    type: link_default
     region: content
 hidden:
   created: true
