--- a/config/sync/field.field.paragraph.social_media_embed.field_vih_link.yml
+++ b/config/sync/field.field.paragraph.social_media_embed.field_vih_link.yml
@@ -1,14 +1,14 @@
-uuid: 026bd2d1-d8d7-4d6d-b840-c31b4d38d02a
+uuid: 341d6844-f54c-419c-8550-a4ef1618f480
 langcode: da
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_link
+    - field.storage.paragraph.field_vih_link
     - paragraphs.paragraphs_type.social_media_embed
   module:
     - link
-id: paragraph.social_media_embed.field_link
-field_name: field_link
+id: paragraph.social_media_embed.field_vih_link
+field_name: field_vih_link
 entity_type: paragraph
 bundle: social_media_embed
 label: Link
@@ -19,5 +19,5 @@ default_value: {  }
 default_value_callback: ''
 settings:
   link_type: 17
-  title: 2
+  title: 1
 field_type: link
