VI-179 node vih_long_cource field_vih_paragraphs settings

--- a/config/sync/core.entity_view_display.node.vih_long_cource.list_advanced.yml
+++ b/config/sync/core.entity_view_display.node.vih_long_cource.list_advanced.yml
@@ -5,7 +5,8 @@ dependencies:
   config:
     - core.entity_view_mode.node.list_advanced
     - field.field.node.vih_long_cource.body
-    - field.field.node.vih_long_cource.field_paragraphs
+    - field.field.node.vih_long_cource.field_metatag
+    - field.field.node.vih_long_cource.field_vih_banner
     - field.field.node.vih_long_cource.field_vih_cource_contact_person
     - field.field.node.vih_long_cource.field_vih_course_heading
     - field.field.node.vih_long_cource.field_vih_course_image
@@ -16,6 +17,8 @@ dependencies:
     - field.field.node.vih_long_cource.field_vih_course_subheading
     - field.field.node.vih_long_cource.field_vih_course_subsc_price
     - field.field.node.vih_long_cource.field_vih_course_week_price
+    - field.field.node.vih_long_cource.field_vih_paragraphs
+    - field.field.node.vih_long_cource.scheduled_update
     - image.style.list_advanced
     - node.type.vih_long_cource
   module:
@@ -248,7 +251,7 @@ content:
 hidden:
   field_banner: true
   field_metatag: true
-  field_paragraphs: true
+  field_vih_banner: true
   field_vih_cource_contact_person: true
   field_vih_course_heading: true
   field_vih_course_periods: true
@@ -258,6 +261,7 @@ hidden:
   field_vih_course_subheading: true
   field_vih_course_subsc_price: true
   field_vih_course_week_price: true
+  field_vih_paragraphs: true
   langcode: true
   links: true
   scheduled_update: true
