--- a/config/sync/core.entity_form_display.node.vih_long_cource.default.yml
+++ b/config/sync/core.entity_form_display.node.vih_long_cource.default.yml
@@ -6,7 +6,6 @@ dependencies:
     - entity_browser.browser.image_browser
     - field.field.node.vih_long_cource.body
     - field.field.node.vih_long_cource.field_metatag
-    - field.field.node.vih_long_cource.field_paragraphs
     - field.field.node.vih_long_cource.field_vih_banner
     - field.field.node.vih_long_cource.field_vih_cource_contact_person
     - field.field.node.vih_long_cource.field_vih_course_heading
@@ -18,6 +17,7 @@ dependencies:
     - field.field.node.vih_long_cource.field_vih_course_subheading
     - field.field.node.vih_long_cource.field_vih_course_subsc_price
     - field.field.node.vih_long_cource.field_vih_course_week_price
+    - field.field.node.vih_long_cource.field_vih_paragraphs
     - field.field.node.vih_long_cource.scheduled_update
     - node.type.vih_long_cource
   module:
@@ -34,7 +34,6 @@ third_party_settings:
     group_banner:
       children:
         - title
-        - field_banner
         - field_vih_banner
       parent_name: ''
       weight: 0
@@ -53,6 +52,7 @@ third_party_settings:
         - field_vih_course_subheading
         - body
         - field_paragraphs
+        - field_vih_paragraphs
       parent_name: ''
       weight: 1
       format_type: tab
@@ -133,20 +133,6 @@ content:
     third_party_settings: {  }
     type: metatag_firehose
     region: content
-  field_paragraphs:
-    weight: 7
-    settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: closed
-      closed_mode: summary
-      autocollapse: all
-      add_mode: modal
-      form_display_mode: default
-      default_paragraph_type: 1_column_action_centered
-    third_party_settings: {  }
-    type: paragraphs
-    region: content
   field_vih_banner:
     type: entity_browser_file
     weight: 3
@@ -161,7 +147,7 @@ content:
     region: content
     third_party_settings: {  }
   field_vih_cource_contact_person:
-    weight: 10
+    weight: 11
     settings:
       match_operator: CONTAINS
       size: 60
@@ -241,6 +227,20 @@ content:
     third_party_settings: {  }
     type: number
     region: content
+  field_vih_paragraphs:
+    type: paragraphs
+    weight: 8
+    region: content
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: closed
+      closed_mode: summary
+      autocollapse: all
+      add_mode: modal
+      form_display_mode: default
+      default_paragraph_type: 1_column_action_centered
+    third_party_settings: {  }
   langcode:
     type: language_select
     weight: 27
