--- a/config/sync/core.entity_view_display.node.news.default.yml
+++ b/config/sync/core.entity_view_display.node.news.default.yml
@@ -7,8 +7,8 @@ dependencies:
     - field.field.node.news.field_image
     - field.field.node.news.field_metatag
     - field.field.node.news.field_news_tags
-    - field.field.node.news.field_paragraphs
     - field.field.node.news.field_vih_banner
+    - field.field.node.news.field_vih_paragraphs
     - field.field.node.news.scheduled_update
     - image.style.banner_small
     - node.type.news
@@ -61,15 +61,6 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
     region: content
-  field_paragraphs:
-    weight: 4
-    label: hidden
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    type: entity_reference_revisions_entity_view
-    region: content
   field_vih_banner:
     weight: 6
     label: hidden
@@ -78,6 +69,15 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+    region: content
+  field_vih_paragraphs:
+    weight: 5
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    type: entity_reference_revisions_entity_view
     region: content
   links:
     weight: 0
