--- a/config/sync/core.entity_view_display.node.news.teaser.yml
+++ b/config/sync/core.entity_view_display.node.news.teaser.yml
@@ -8,12 +8,13 @@ dependencies:
     - field.field.node.news.field_image
     - field.field.node.news.field_metatag
     - field.field.node.news.field_news_tags
-    - field.field.node.news.field_paragraphs
     - field.field.node.news.field_vih_banner
+    - field.field.node.news.field_vih_paragraphs
     - field.field.node.news.scheduled_update
     - node.type.news
   module:
     - panelizer
+    - paragraphs
     - text
     - user
 third_party_settings:
@@ -35,11 +36,17 @@ content:
       trim_length: 100
     third_party_settings: {  }
     region: content
+  field_vih_paragraphs:
+    type: paragraph_summary
+    weight: 6
+    region: content
+    label: above
+    settings: {  }
+    third_party_settings: {  }
 hidden:
   field_image: true
   field_metatag: true
   field_news_tags: true
-  field_paragraphs: true
   field_vih_banner: true
   langcode: true
   links: true
